Fix SecurityConfig and CorsConfig for production